# nemo-lakehouse

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
.github/workflows/: ci.yml
docs/: architecture.md  security.md  threat-model.md
examples/: event_schema.json  metadata_graph_demo.md
scripts/: security_check.sh
src/: catalog.rs  domain.rs  error.rs  graph.rs  lib.rs  metadata.rs  schema.rs  table.rs
tests/: catalog_tests.rs  cli_tests.rs  features_tests.rs  graph_tests.rs  schema_tests.rs
ui/: index.css  index.html  index.js
