[package]
name = "nemo-lakehouse"
version = "0.1.0"
edition = "2021"
description = "Rust research MVP for a graph-native lakehouse table format."
license = "Apache-2.0"

[lib]
name = "nemo_lakehouse"
path = "src/lib.rs"

[[bin]]
name = "nemo"
path = "src/bin/nemo.rs"

[[bin]]
name = "nemo-ui"
path = "src/bin/nemo-ui.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"

